[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/white8.png" type="Texture" id=1]
[ext_resource path="res://src/creature/creature.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="creature" type="Area2D"]
position = Vector2( 256, 384 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true
[connection signal="area_entered" from="." to="." method="_on_creature_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_creature_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
